<resources>
    <string name="app_name">WoopaySecondTask</string>
    <string name="auth">auth</string>
    <string name="reg">reg</string>
    <string name="category">category</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Authentication">Authentication</string>
    <string name="Registration">Registration</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="please_enter_login">Please enter login</string>
    <string name="password">Password</string>
    <string name="woopay_wallet">Woopay Wallet</string>
    <string name="phoneNum">Ваш номер телефона</string>
    <string name="email">E-mail</string>
    <string name="termOfUse">Принимаю пользовательское соглашение Wooppay</string>
    <string name="next">Продолжить</string>
    <string name="enter_sms_code">Введите код из СМС</string>
    <string name="new_code">Новый код будет доступен 0:</string>
    <string name="pickPass">Придумайте пароль</string>
    <string name="repeatPass">Придумайте пароль</string>
    <string name="contain">Пароль должен содержать:</string>
    <string name="createWallet">Создать кошелёк</string>
    <string name="eight_symbol">Не менее 8 символов</string>
    <string name="numbers">Цифры</string>
    <string name="capital_letter">Заглавные и строчные буквы латиницей</string>
    <string name="newCode">Новый код будет доступен</string>
    <string name="haveAcc">У меня уже есть аккаунт</string>
    <string name="no_acc">У меня еще нет аккаунта</string>
    <string name="password_kiril">Пароль</string>
    <string name="log_out">Log Out</string>
    <string name="pin_info">Код быстрого доступа</string>
    <string name="topService">Топ сервисы</string>
    <string name="serviceCategory">Категории</string>
    <string name="service_name">Сервис</string>
    <string name="platform">Платформа</string>
    <string name="forgotPass">Забыл Пин</string>
    <string name="category_detail_information">Category detail information</string>
</resources>