<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/back"/>
    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="13dp"
        android:src="@drawable/icon"/>
    <TextView
        android:id="@+id/tv_woopayWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:text="@string/woopay_wallet"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/ed_pick_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_woopayWallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:hint="@string/pickPass"
        android:inputType="number"/>
    <EditText
        android:id="@+id/ed_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ed_pick_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/black"
        android:inputType="text"
        android:textSize="14sp"
        android:hint="@string/repeatPass"/>
    <TextView
        android:id="@+id/tv_contain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ed_repeat_password"
        android:layout_marginTop="49dp"
        android:layout_marginHorizontal="24dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/contain"
        android:textColor="@color/grey_500"/>
    <LinearLayout
        android:id="@+id/linear_contain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_contain"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/eight_symbol"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/numbers"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/capital_letter"
            android:textColor="@color/black"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_createWallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_contain"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/createWallet"
        android:textSize="16sp"
        android:enabled="false"
        android:textAllCaps="false"
        android:fontFamily="@font/inter_regular"
        android:background="@drawable/background_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>